# Reader

./: README.md  checking.py  cinemanews.txt  cybersecuritynews.txt  filter.py  filterz.py  handler_input.py  hardnews on eneergy .txt  hardnews on neigh.txt  main.py  output.txt  pyproject.toml  req.py  response.py  sample.py  sec_req.py  seliniumsp.py  submain.py  thehackernes.txt  voice_input.py
flask-news-scraper-backend/: run.py
flask-news-scraper-backend/app/: __init__.py
flask-news-scraper-backend/app/routes/: news.py
flask-news-scraper-backend/app/services/: scraper.py
flask-news-scraper-backend/app/utilsy/: validators.py
flask-news/frontend/: api.py  index.html  scraper.py
