[project]
name = "webscrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "flask>=3.1.2",
    "gtts>=2.5.4",
    "lxml>=6.0.0",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "requests>=2.32.4",
    "selenium>=4.35.0",
    "speechrecognition>=3.14.3",
    "webdriver-manager>=4.0.2",
]
